implementando le funzioni di mercato dei blocchi

--- a/navbar.html
+++ b/navbar.html
@@ -24,12 +24,12 @@
             </div>
             <span style="flex: 2 2 auto; "></span>
             <div class="nav-btn" id="home" >
-                <a   href="#" >HOME</a>
+                <a   href="#" >_home</a>
             </div>  
             
             <div id="profile" >
-                <a class="signin nav-btn" href="#" >SIGN IN</a>
-                <a class="login nav-btn" href="#" >LOGIN</a>
+                <a class="signup nav-btn" href="#" >_sign up</a>
+                <a class="login nav-btn" href="#" >_login</a>
             </div>
             
         </div>
