--- a/registrazione/index.html
+++ b/registrazione/index.html
@@ -34,8 +34,12 @@
                 <label for="email">Il tuo indirizzo email:</label><br>
                 <input type="email" id=email name="email" placeholder="Email" required><br>
                 
-                <input type="checkbox" name="checkbox" required>
-                <i>Accetto i <a href="termini-servizio.html"><strong>Termini di servizio</strong></a> di Mosaic<br><br>
+                <input type="checkbox" name="checktermini" id="checktermini" required>
+
+                <label for="checktermini"><i>Accetto i <a href="termini-servizio.html"><strong>Termini di servizio</strong></a> di Mosaic</label><br>
+
+                <br>
+
                 <input type="submit" value="Registrati" >
             
             </form>
