--- a/test-navbar.html
+++ b/test-navbar.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>navbar</title>
-    <link rel="stylesheet" href="css/MY_css/block-grid-max.css">
-    <link rel="stylesheet" href="css/MY_css/navbar.css">
+
 
     <!--<link rel="stylesheet" href="css/BS_css/bootstrap.css">-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/MY_js/navbar.js"></script>
+    <link rel="stylesheet" href="css/block-grid-max.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <script src="./jquery/jquery.min.js"></script>
+    <script src="js/navbar.js"></script>
 </head>
 <body>
     <!--navbar-->
